--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -232,6 +232,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/tools/go.sum') }}
 
+      - name: Install tools
+        run: |
+          make install-vendored-tools
+        shell: bash
+
       - name: Check release
         run: |
           make check-releaser
