--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
       max-parallel: 2
       matrix:
         os: ["ubuntu-22.04"]
-        go: ["1.20"]
+        go-version: [1.22.x]
     runs-on: ${{ matrix.os }}
     name: Run Tests
     steps:
@@ -39,7 +39,7 @@ jobs:
       - name: Set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - run: |
           go version
@@ -80,7 +80,7 @@ jobs:
       max-parallel: 2
       matrix:
         os: ["ubuntu-22.04"]
-        go: ["1.20"]
+        go-version: [1.22.x]
     runs-on: ${{ matrix.os }}
     name: Run linters
     steps:
@@ -92,7 +92,7 @@ jobs:
       - name: Set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
       - run: |
           go version
         shell: bash
@@ -132,7 +132,7 @@ jobs:
       max-parallel: 1
       matrix:
         os: ["ubuntu-22.04"]
-        go: ["1.20"]
+        go-version: [1.22.x]
     runs-on: ${{ matrix.os }}
     name: Quality reports
     steps:
@@ -144,7 +144,7 @@ jobs:
       - name: Set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
       - run: |
           go version
         shell: bash
@@ -196,7 +196,7 @@ jobs:
       max-parallel: 2
       matrix:
         os: ["ubuntu-22.04"]
-        go: ["1.20"]
+        go-version: [1.22.x]
     runs-on: ${{ matrix.os }}
     name: Build
     steps:
@@ -208,7 +208,7 @@ jobs:
       - name: Set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version: ${{ matrix.go-version }}
 
       - run: |
           go version
