--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -141,7 +141,7 @@ jobs:
         shell: bash
 
   reports:
-    needs: [ testing, linting, build ]
+    needs: [ testing, linting ]
     strategy:
       fail-fast: true
       max-parallel: 1
