--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,28 +14,14 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-  
-  - package-ecosystem: "gomod"
-    directory: "/tools/"
-    schedule:
-      interval: "daily"
-    labels:
-      - "dependencies"
-      - "go"
-    assignees:
-      - "obalunenko"
-    reviewers:
-      - "obalunenko"
-    commit-message:
-      prefix: "chore"
-      include: "scope"
-  
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
     labels:
       - "dependencies"
+      - "github-actions"
     assignees:
       - "obalunenko"
     reviewers:
@@ -43,4 +29,18 @@ updates:
     commit-message:
       prefix: "chore"
       include: "scope"
-  
+
+  - package-ecosystem: "docker"
+    directory: "/build/docker/go-tools"
+    schedule:
+      interval: "daily"
+    labels:
+      - "dependencies"
+      - "docker"
+    assignees:
+      - "obalunenko"
+    reviewers:
+      - "obalunenko"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
