fix: ci configs

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,9 @@ version: 2
 release:
   github:
     owner: obalunenko
-    name: getenv
+    name: exiftool-go
   footer: |
-    **Full Changelog**: https://github.com/obalunenko/getenv/compare/{{ .PreviousTag }}...{{ .Tag }}
+    **Full Changelog**: https://github.com/obalunenko/exiftool-go/compare/{{ .PreviousTag }}...{{ .Tag }}
 
 gomod:
   proxy: true
