--- a/.golangci.pipe.yml
+++ b/.golangci.pipe.yml
@@ -16,7 +16,7 @@ linters-settings:
   gofmt:
     simplify: true
   goimports:
-    local-prefixes: github.com/obalunenko/getenv/
+    local-prefixes: github.com/obalunenko/exiftool-go
   revive:
     # see https://github.com/mgechev/revive#available-rules for details.
     ignore-generated-header: true
