--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,7 +55,7 @@ linters-settings:
   gocyclo:
     min-complexity: 15
   goimports:
-    local-prefixes: github.com/obalunenko/getenv
+    local-prefixes: github.com/obalunenko/exiftool-go
   mnd:
     # List of enabled checks, see https://github.com/tommy-muehle/go-mnd/#checks for description.
     # Default: ["argument", "case", "condition", "operation", "return", "assign"]
