feat: Bump go to 1.24; Bump exiftool to 13.21 (#175)
* chore: Bump go to 1.24

* feat: Bump exiftool to 13.21

* fix: ci configs

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,25 @@
+version: 2
+
 release:
   github:
     owner: obalunenko
     name: exiftool-go
+  footer: |
+    **Full Changelog**: https://github.com/obalunenko/exiftool-go/compare/{{ .PreviousTag }}...{{ .Tag }}
+
+gomod:
+  proxy: true
+  # If proxy is true, use these environment variables when running `go mod` commands (namely, `go mod tidy`).
+  # Defaults to `os.Environ()`.
+  env:
+    - GOPROXY=https://proxy.golang.org,direct
+    - GOSUMDB=sum.golang.org
+    - GOPRIVATE=example.com/blah
+    - CGO_ENABLED=0
+  # Which Go binary to use.
+  # Defaults to `go`.
+  mod: vendor
+  gobinary: go
 
 builds:
   - skip: true
@@ -10,14 +28,16 @@ checksum:
   name_template: "{{ .ProjectName }}-{{ .Version }}-checksums.txt"
 
 snapshot:
-  name_template: SNAPSHOT-{{ .Commit }}
+  version_template: SNAPSHOT-{{ .Commit }}
 
 changelog:
   sort: asc
+  use: github
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
+      - "^dev:"
       - "README"
       - "^readme"
       - "^scripts"
@@ -27,3 +47,15 @@ changelog:
       - Rebase on master
       - "^Makefile"
       - "goreleaser"
+  groups:
+    - title: 'New Features'
+      regexp: "^.*feat[(\\w)]*:+.*$"
+      order: 0
+    - title: 'Bug fixes'
+      regexp: "^.*fix[(\\w)]*:+.*$"
+      order: 10
+    - title: Other work
+      order: 999
+
+milestones:
+  - close: true
