--- a/.golangci.pipe.yml
+++ b/.golangci.pipe.yml
@@ -1,10 +1,13 @@
 linters:
   disable-all: true
   enable:
+    - govet
     - errcheck
     - gofmt
     - revive
     - goimports
+    - unused
+    - gosimple
 
 linters-settings:
   errcheck:
@@ -28,6 +31,8 @@ linters-settings:
         arguments: [ [ "call-chain", "loop", "method-call", "recover", "return" ] ]
 
 issues:
+  # make issues output unique by line, default is true
+  uniq-by-line: true
   exclude-use-default: false
   exclude:
     # for "public interface + private struct implementation" cases only!
@@ -97,16 +102,20 @@ issues:
 run:
   issues-exit-code: 1
   tests: true
-  skip-dirs:
+  exclude-dirs:
     - vendor/
-  skip-files:
+  exclude-files:
     - \.pb\.go$
 
 # output configuration options
 output:
   # colored-line-number|line-number|json|tab|checkstyle|code-climate|junit-xml|github-actions
   # default is "colored-line-number"
-  format: github-actions
+  formats:
+    - format: colored-line-number
+      path: stderr
+    - format: checkstyle
+      path: linters-report.xml
 
   # print lines of code with issue, default is true
   print-issued-lines: true
@@ -114,11 +123,10 @@ output:
   # print linter name in the end of issue text, default is true
   print-linter-name: true
 
-  # make issues output unique by line, default is true
-  uniq-by-line: true
-
   # add a prefix to the output file references; default is no prefix
   path-prefix: ""
 
   # sorts results by: filepath, line and column
   sort-results: true
+
+
